--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
   <div class="conainer">
     <div class="row max-height align-items-center">
       <div class="col-11 mx-auto col-md-6 quote-container p-5">
-        <button class="btn-outline-primary text-capitalize my-4 d-block mx-auto" id="generate-btn">generate quote</button>
-
-        <h3 class="text-muted"><span class="quote-icon mr-3"><i class="fas fa-quote-left fa-3x"></i></span><span id="quote">Menu :D
-          </span></i></span></h3>
-        <h5 class="text-right text-capitalize author">-<span class="quote-author ml-3 ">author</span></h5>
+        <li>
+          <a href="/Colours">Colour</a>
+          <a href="/Quotes">Quotes</a>
+      </li>
       </div>
 
 
