--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="conainer">
     <div class="row max-height align-items-center">
       <div class="col-11 mx-auto col-md-6 quote-container p-5">
-        <a href="/Colours">Colour</a>
-        <a href="/Quotes">Quotes</a>
+        <a href="/colours">Colour</a>
+        <a href="/quotes">Quotes</a>
       </div>
 
 
