--- a/index.html
+++ b/index.html
@@ -2,45 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- main css -->
-  <link rel="stylesheet" href="css/main.css">
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-
-  <!-- font awesome -->
-  <script src="js/all.js"></script>
-  <title>Display Quotes</title>
-  <style>
-  </style>
+  <title>Menu</title>
 </head>
 
 <body>
+  <a href = "http://olly.liew.co.uk/colours/">Background Colours</a>
+  <br><a href = "http://olly.liew.co.uk/quotes/">Random Quotes</a>
 
-  <div class="conainer">
-    <div class="row max-height align-items-center">
-      <div class="col-11 mx-auto col-md-6 quote-container p-5">
-        <a href="/colours">colour</a>
-        <a href="/quotes">quotes</a>
-      </div>
-
-
-    </div>
-  </div>
+ 
 
 
 
 
-  <!-- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- script js -->
-  <script src="js/app.js"></script>
-</body>
-
-</html>
+ 
